--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,10 @@
-services:
+ services:
   - type: web
     name: test-scraping
     env: docker
     dockerfilePath: ./Dockerfile
     buildCommand: npm install
     startCommand: npm start
+    envVars:
+      - key: PUPPETEER_EXECUTABLE_PATH
+        value: "/usr/bin/google-chrome-stable"
