--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
- services:
+services:
   - type: web
     name: test-scraping
     env: docker
@@ -7,4 +7,6 @@
     startCommand: npm start
     envVars:
       - key: PUPPETEER_EXECUTABLE_PATH
-        value: "/usr/bin/google-chrome-stable"
+        value: "/usr/bin/google-chrome"
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: "true"
