--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "express": "^4.21.1",
     "jsdom": "^25.0.1",
     "jsonwebtoken": "^9.0.2",
-    "puppeteer": "^23.9.0"
+    "puppeteer-core": "^23.9.0"
   }
 }
